website/static/website/css/index.css
.research-area-icon-label {
  text-align: center;
}

.news-banner-overlay-container{
  z-index: 15;
  right:0;
  left:0;
  position: absolute;
  top: 100px;    
}

.news-banner-listing {
  z-index: 15;
  position: relative; 
  background: rgba(0, 0, 0, 0.65); 
  padding: 6px 10px 1px 10px; 
  border-radius: 5px; 
  margin-right: 15px;
  float: right;
  width: 220px;
}

.news-banner-item{
  margin-bottom:15px; 
  font-family:Roboto;
}

.news-banner-item a{
  color:rgb(245,245,245);
}

.news-banner-item-date{
  font-weight: 500;
  color:rgb(230,230,230);
}

@media only screen and (min-width: 600px) {
  .news-listing {
    display: inline;
  }
}

.research-area-icon-row img {
  width: 100%;
}

.research-area-icon-row {
  padding-top: 20px;
  padding-bottom: 20px;
}

.research-area-icon-label {
  width: 100%;
  text-align: center;
}

.research-area-icon-col {
  text-align: center;
}

.section-header {
  margin-top: 40px;
  margin-bottom: 15px;
  text-align: center;
  font-size: 24px;
  /*text-transform: uppercase;*/
}

.see-all-artifacts {
  margin-top: 15px;
  text-transform: uppercase;
  text-align: right;
  font-weight: 700;
}

.news_thumbnail_image {
  width: 50px;
}

.pub-column {
  /*no-op currently*/
  height: 129px;
  /* Had to fix height because of weird wrapping, see: https://stackoverflow.com/a/25682250 */
}

.talk-text {
  margin-bottom: 20px;
  vertical-align: top;
  margin-top: 5px;
  /*width:80%;*/
  /*text-align: center;*/
}

.pub-thumbnail {
  position: relative;
}

.pub-thumbnail-image {
  border: 1px solid #dddddd;
  width: 90%;
  margin: auto;
}

.pub-thumbnail-image2 {
  border: 1px solid #dddddd;
}

.pub-text {
  margin: 4px 9px 0 9px;
  vertical-align: top;
  /*width:80%;*/
  /*text-align: center;*/
}

.pub-to-appear-text {
  font-style: italic;
}

.pub-thumbnail-image-float-left {
  border: 1px solid #dddddd;
  width: 25%;
  float: left;
  margin-right: 5px;
  /*position: absolute;*/
  /*clip: rect(0px,100px,50px,0px);*/
}

.pub-text-float-left {
  vertical-align: top;
}

.talk2-thumbnail-image {
  object-fit: cover;
  width: 295.42px;
  height: 166px;
}

h1 {
  text-transform: uppercase;
  font-variant: normal;
}

#makelab-intro h1 {
  text-align: center;
}

#makelab-intro {
  margin: 0;
  padding: 0;
  background-color: #eac446;
}

.page-link {
  margin: 0;
  text-align: left;
}

.landing-talk-fix {
  /*min-width: 240px;*/
  padding-left: 0;
}

@media (min-width: 769px) {
  .landing-content {
    padding-right: 80px;
  }
}

.content-container {
  padding-left: 25px;
  padding-right: 25px;
}

